# recallrs

./: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  ocr.rs  text_embedding.rs  vector_database.rs
src/lib/: theme-service.ts
src/lib/themes/base/: theme.json
src/lib/tokens/: tokens.json
src/routes/: +layout.svelte  +layout.ts
src/routes/login/: +page.svelte
