[package]
name = "recallrs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
ort = {version = "2.0.0-rc.0", features = ["ndarray", "download-binaries"] }
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oasysdb = "0.6.0"
fastembed = "3.6.0"
xcap = "0.0.10"
ocrs = "0.8.0"
rten = "0.10.0"
image = "0.25.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
